--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Rob Hoare</h3>
-
-<p>Coming Soon.</p>
+        <h3>Coming Soon</h3>
       </section>
     </div>
 
